--- a/react-complete-guide/src/App.css
+++ b/react-complete-guide/src/App.css
@@ -2,6 +2,21 @@
   text-align: center;
 }
 
+.Button{
+  padding: 8px;
+  color: white;
+  background: green;
+  border: 1px solid #eee;
+}
+
+.Button.Red{
+  background-color: red;
+}
+
+.Button.Red:hover{
+  background-color: salmon;
+}
+
 .red{
   color: red;
 }
