--- a/fieldmap/src/App.css
+++ b/fieldmap/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.hide{
+  display: none;
+}
+
 header{
   margin-bottom: 20px;
 }
@@ -12,20 +16,25 @@ header{
 }
 
 .tags{
-  width: 90%;
-  background-color: #000000;
+  background-color: #5d707c27;
   margin: 20px auto 0px;
   padding: 20px;
   color: white;
+  display: inline-block;
 }
 
 .tag{
   margin: 9px;
   padding: 7px;
-  background: white;
+  background: blue;
   display: inline;
-  color: black;
+  color: white;
   border-radius: 2px;
+}
+
+.tag:hover{
+  background-color: red;
+  color: white;
 }
 
 .tag span{
@@ -48,6 +57,15 @@ header{
   padding-left: 4px;
 }
 
+.stats-box{
+  width: 100%;
+  background-color: gray;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+}
+
+
 #logo{
   padding-top: 0px;
   height: 60px;
@@ -62,6 +80,31 @@ header{
   position: absolute;
   top: 0px;
   right: 0px;
+}
+
+.stats{
+  cursor: pointer;
+  background-color: black;
+  padding: 10px;
+  width: 50px;
+  color: white;
+  position: absolute;
+  top: 50px;
+  right: 0px; 
+
+}
+
+a:link, a:visited, a:hover, a:active  {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover{
+  text-decoration: underline;
+}
+
+.stats:hover{
+  background-color: green;
 }
 
 .search-box{
@@ -88,6 +131,6 @@ header{
 
 .author{
   text-align: left;
-  font-size: 12px;
+  font-size: 13px;
   padding-bottom: 3px;
 }
